Fix: alto de página arreglado (no se muestra scrollbar innecesario)

--- a/src/login/main.css
+++ b/src/login/main.css
@@ -66,6 +66,17 @@
   width: 600px !important;
   height: 600px !important;
   overflow: hidden !important;
+  opacity: 0;
+  transform: scale(0.95);
+  transition:
+    opacity 0.3s ease,
+    transform 0.3s ease;
+}
+
+/* Cuando el modal está visible */
+.docs-modal-container.show {
+  opacity: 1;
+  transform: scale(1);
 }
 
 .docs-modal-bar {
@@ -133,8 +144,8 @@
   position: fixed !important;
   top: 50% !important;
   left: 50% !important;
-  transform: translate(-25%, -60%) !important;
-  width: 100vw !important;
+  transform: translate(-32%, -60%) !important;
+  width: 150vw !important;
   height: 150vh !important;
   background-color: rgba(0, 0, 0, 0.6) !important;
   display: flex !important;
@@ -157,4 +168,9 @@
   display: block;
   width: 100%;
   height: 100%;
+}
+
+.kcHtmlClass {
+  height: 100vh;
+  overflow: hidden;
 }
